<resources>
    <string name="app_name">CrudApp</string>
    <string name="welcome_to_crud">Welcome To CRUD</string>
    <string name="continue_to_app">Continue To App</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="read">Read</string>
    <string name="crud_app">CRUD APP</string>
    <string name="update">Update</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
</resources>